# esp-dl

./: app_main.cpp  bluetooth.c  bluetooth_motor.c  camera_lcd_bluetooth.cpp  hand gesture
Hand Detect /main/: CMakeLists.txt  app_main.cpp  lcd_display.cpp  lcd_display.h
